# mimium-language

./: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  Cargo.toml  Development.md  LICENSE  README.md  esbuild.js  language-configuration.json  mimium-language.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vsc-extension-quickstart.md
.github/workflows/: deploy.yml  deploy_prerelease.yml  test.yml
client/: package-lock.json  package.json  pnpm-lock.yaml
client/src/: extension.ts  installer.ts  mimium_env.ts  utils.ts
client/src/test/: runTest.ts
client/src/test/suite/: extension.test.ts
client/syntaxes/: mimium.tmLanguage.json
src/: extension.ts  installer.ts  main.rs  mimium_env.ts  semantic_token.rs
src/test/suite/: extension.test.ts  index.ts
syntaxes/: mimium.tmLanguage.json
