[package]
name = "mimium-language-server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.5"
ropey = "1.5.0"
mimium-lang = { git = "https://github.com/mimium-org/mimium-rs.git", branch = "language-server" }
dashmap = "6.1.0"
log = "0.4.28"
